# cpp-cmake-starter

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
